--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,21 +14,35 @@
 		<param-value>true</param-value>
 	</context-param>
 	<context-param>
+		<param-name>com.sun.faces.injectionProvider</param-name>
+		<param-value>com.thjug.bgile.guice.GuiceInjectionProvider</param-value>
+	</context-param>
+	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bootstrap</param-value>
 	</context-param>
 	<filter>
-		<filter-name>guiceFilter</filter-name>
+		<filter-name>URLFilters</filter-name>
+		<filter-class>com.thjug.bgile.faces.URLFilters</filter-class>
+		<init-param>
+			<param-name>postfix</param-name>
+			<param-value>.xhtml</param-value>
+		</init-param>
+	</filter>
+	<filter>
+		<filter-name>GuiceFilter</filter-name>
 		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>guiceFilter</filter-name>
+		<filter-name>URLFilters</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>GuiceFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<context-param>
-		<param-name>com.sun.faces.injectionProvider</param-name>
-		<param-value>com.thjug.bgile.guice.GuiceInjectionProvider</param-value>
-	</context-param>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -52,15 +66,13 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 	<session-config>
-		<session-timeout>
-			5
-		</session-timeout>
+		<session-timeout>5</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>
+		<welcome-file>index</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
-		<location>/signin.xhtml</location>
+		<location>/signin</location>
 	</error-page>
 </web-app>
