--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,7 +69,7 @@
 		<session-timeout>5</session-timeout>
 	</session-config>
 	<welcome-file-list>
-		<welcome-file>index</welcome-file>
+		<welcome-file>home.xhtml</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
