--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,7 @@
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
 		<param-value>bootstrap</param-value>
+		<!--param-value>none</param-value-->
 	</context-param>
 	<filter>
 		<filter-name>URLFilters</filter-name>
