--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,7 @@
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
+	</session-config>
     <welcome-file-list>
         <welcome-file>home.xhtml</welcome-file>
     </welcome-file-list>
