--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.thjug.bgile</groupId>
 	<artifactId>bgile</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>war</packaging>
 
 	<name>Bgile</name>
@@ -182,6 +182,14 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.13</version>
 		</dependency>
+
+		<!-- Gravatar -->
+		<dependency>
+			<groupId>com.timgroup</groupId>
+			<artifactId>jgravatar</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 
 		<!-- Security -->
 		<dependency>
