--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.thjug.bgile</groupId>
 	<artifactId>bgile</artifactId>
-	<version>1.1.6-beta</version>
+	<version>1.1.7-beta</version>
 	<packaging>war</packaging>
 
 	<name>Bgileboard</name>
@@ -32,26 +32,23 @@
 	<repositories>
 		<repository>
 			<id>Java.Net</id>
-			<url>http://download.java.net/maven/2/</url>
+			<url>https://maven.java.net/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>EclipseLink</id>
 			<url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
 		</repository>
 		<repository>
-			<url>http://repository.primefaces.org/</url>
 			<id>primefaces</id>
+			<url>http://repository.primefaces.org/</url>
 			<layout>default</layout>
-			<name>Repository for library PrimeFaces 3.5</name>
 		</repository>
 		<repository>
 			<id>deluan.repo</id>
-			<name>Deluan's Projects Repository</name>
 			<url>http://deluan.googlecode.com/svn/releases</url>
 		</repository>
 		<repository>
 			<id>deluan.snapshots</id>
-			<name>Deluan's Projects Snapshots Repository</name>
 			<url>http://deluan.googlecode.com/svn/snapshots</url>
 			<releases>
 				<enabled>false</enabled>
@@ -303,7 +300,7 @@
 					<plugin>
 						<groupId>org.mortbay.jetty</groupId>
 						<artifactId>jetty-maven-plugin</artifactId>
-						<version>8.1.13.v20130916</version>
+						<version>8.1.14.v20131031</version>
 						<configuration>
 							<scanIntervalSeconds>10</scanIntervalSeconds>
 							<stopKey>foo</stopKey>
