--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--plugin>
 				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
 				<artifactId>maven-java-formatter-plugin</artifactId>
 				<version>0.4</version>
@@ -245,7 +245,7 @@
 				<configuration>
 					<configFile>${project.basedir}/style/Formatter.xml</configFile>
 				</configuration>
-			</plugin>
+			</plugin-->
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
