--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.thjug.bgile</groupId>
 	<artifactId>bgile</artifactId>
-	<version>1.1.8-beta</version>
+	<version>1.1.9</version>
 	<packaging>war</packaging>
 
 	<name>Bgileboard</name>
