--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 	<name>Bgileboard</name>
 
 	<organization>
-		<name>Bgileboard</name>
+		<name>Bgile Source</name>
 		<url>https://github.com/nuboat/bgile</url>
 	</organization>
 
 	<developers>
 		<developer>
-			<id>@peerapat</id>
+			<id>@nuboat</id>
 			<name>Peerapat Asoktummarungsri</name>
 		</developer>
 	</developers>
@@ -367,7 +367,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.16</version>
+						<version>2.17</version>
 						<configuration>
 							<suiteXmlFiles>
 								<suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
