--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>Sonar (snapshots)</id>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -248,7 +252,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.6.5.201403032054</version>
+				<version>0.7.0.201403182114</version>
 				<executions>
 					<execution>
 						<goals>
