--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.thjug.bgile</groupId>
 	<artifactId>bgile</artifactId>
-	<version>1.1.13</version>
+	<version>1.1.14</version>
 	<packaging>war</packaging>
 
 	<name>Bgileboard</name>
@@ -27,6 +27,12 @@
 		<sonar.language>java</sonar.language>
 		<sonar.dynamicAnalysis>true</sonar.dynamicAnalysis>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+
+		<ignore.failures>true</ignore.failures>
+		<meta.filter></meta.filter>
+		<threads>1</threads>
+		<skip>false</skip>
+		<stories>**/EtsyDotComStories.java</stories>
 	</properties>
 
 	<repositories>
@@ -70,7 +76,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>4.0</version>
+			<version>5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
@@ -101,14 +107,14 @@
 
 		<!-- PostgreSQl -->
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<version>9.3-1101-jdbc41</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
-			<version>2.5.1</version>
+			<version>2.5.2</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commonj.sdo</artifactId>
@@ -126,12 +132,12 @@
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-servlet</artifactId>
-			<version>3.0</version>
+			<version>4.0-beta4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-persist</artifactId>
-			<version>3.0</version>
+			<version>4.0-beta4</version>
 		</dependency>
 
 		<!-- Common -->
@@ -231,6 +237,61 @@
 			<version>6.8.8</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- dependency>
+			<groupId>org.jbehave</groupId>
+			<artifactId>jbehave-spring</artifactId>
+			<version>3.9.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jbehave.web</groupId>
+			<artifactId>jbehave-web-selenium</artifactId>
+			<version>3.5.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-firefox-driver</artifactId>
+			<version>2.42.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.42.2</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium.fluent</groupId>
+			<artifactId>fluent-selenium</artifactId>
+			<version>1.14.5</version>
+			<scope>test</scope>
+		</dependency -->
 	</dependencies>
 
 	<build>
@@ -304,6 +365,12 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -345,6 +412,94 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<!-- profile>
+			<id>jbehave</id>
+			<resources>
+				<resource>
+					<directory>${basedir}/src/test/resources</directory>
+					<filtering>false</filtering>
+				</resource>
+				<resource>
+					<directory>${basedir}/src/test/stories</directory>
+					<filtering>false</filtering>
+				</resource>
+			</resources>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jbehave</groupId>
+						<artifactId>jbehave-maven-plugin</artifactId>
+						<version>3.9.3</version>
+						<executions>
+							<execution>
+								<id>unpack-view-resources</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>unpack-view-resources</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>embeddable-stories</id>
+								<phase>integration-test</phase>
+								<configuration>
+									<includes>
+										<include>${stories}</include>
+									</includes>
+									<excludes />
+									<ignoreFailureInStories>${ignore.failures}</ignoreFailureInStories>
+									<ignoreFailureInView>${ignore.failures}</ignoreFailureInView>
+									<threads>${threads}</threads>
+									<skip>${skip}</skip>
+									<metaFilters>
+										<metaFilter>${meta.filter}</metaFilter>
+									</metaFilters>
+									<executorsClass>org.jbehave.core.embedder.executors.SameThreadExecutors</executorsClass>
+								</configuration>
+								<goals>
+									<goal>run-stories-as-embeddables</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>map-stories</id>
+								<phase>integration-test</phase>
+								<configuration>
+									<includes>
+										<include>**/*StoryMaps.java</include>
+									</includes>
+									<metaFilters>
+										<metaFilter>+category *</metaFilter>
+										<metaFilter>+color *</metaFilter>
+									</metaFilters>
+								</configuration>
+								<goals>
+									<goal>map-stories-as-embeddables</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report-stepdocs</id>
+								<phase>integration-test</phase>
+								<configuration>
+									<includes>
+										<include>${stories}</include>
+									</includes>
+								</configuration>
+								<goals>
+									<goal>report-stepdocs-as-embeddables</goal>
+								</goals>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.google.guava</groupId>
+								<artifactId>guava</artifactId>
+								<version>17.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile-->
 
 		<profile>
 			<id>netbeans-private-testng</id>
