--- a/javadd/pom.xml
+++ b/javadd/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.thjug.bgile.jbehave</groupId>
     <artifactId>bgile-bdd-test</artifactId>
     <version>1.0</version>
-    <name>Bgiletest</name>
+    <name>JavaDD</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
