--- a/scaladd/pom.xml
+++ b/scaladd/pom.xml
@@ -13,7 +13,7 @@
         <meta.filter></meta.filter>
         <threads>1</threads>
         <skip>false</skip>
-        <stories>**/*Story.java</stories>
+        <stories>**/*Story.scala</stories>
 
         <jbehave.core.version>3.9.3</jbehave.core.version>
     </properties>
@@ -29,11 +29,12 @@
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
             <version>${jbehave.core.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jbehave</groupId>
-            <artifactId>jbehave-spring</artifactId>
-            <version>${jbehave.core.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jbehave.site</groupId>
@@ -206,7 +207,7 @@
                         <phase>integration-test</phase>
                         <configuration>
                             <includes>
-                                <include>**/*Story.java</include>
+                                <include>${stories}</include>
                             </includes>
                             <excludes/>
                             <ignoreFailureInStories>${ignore.failures}</ignoreFailureInStories>
